# startup-in-a-box

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
agents/: financial_analyst.py  market_analyst.py  pitch_creator.py  product_manager.py
data/examples/: financials.json  full_results.json  pitch_deck.md
frontend/: app.py
orchestrator/: workflow.py
tests/: test_common_utils.py  test_finance_tools.py
tools/: common_utils.py  finance_tools.py  market_tools.py
