[project]
name = "ai-startup-in-a-box"
version = "0.1.0"
description = "Multi-agent startup pitch deck generator"
requires-python = ">=3.10"
dependencies = [
    "groq",
    "streamlit",
    "python-dotenv",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agents", "tools", "orchestrator"]
